--- a/views/task-create.html
+++ b/views/task-create.html
@@ -147,7 +147,7 @@
 					</div>
 				</div>
 				<div class="col-md-4">
-				<div id="background-container" class="has-warning form-group">
+				<div id="background-container" class="form-group">
 						<label for="backgroundcheck">Background Check</label>
 						<input type="text" name="backgroundcheck" {{#if backgroundcheck}} value="{{backgroundcheck}}" {{/if}} class="form-control" id="backgroundcheck">
 					</div>
