--- a/views/home-auth.html
+++ b/views/home-auth.html
@@ -3,5 +3,6 @@
 	</script>
 
 	<div style="width: 100%; height: 350px">
-		<h1 style="font-size: 4rem; text-align: center; margin-top: 15%;">Welcome to Haven </h1>
+		<h1 style="font-size: 4rem; text-align: center; margin-top: 15%;">Welcome to Haven, {{name}}</h1>
+		<h4 style="font-size: 2rem; text-align: center; margin-top: 15%;">Use the links above to begin your journey.</h4>
 	</div>
