--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -531,7 +531,8 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
 
 .slick-slide
 {
-	margin-left: 0.1%;
+	width: 15rem;
+	margin-left: 0.2%;
 	margin-bottom: 10px;
 }
 
